@@ -18,6 +18,7 @@ import java.io.InputStream;
 import java.time.Duration;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
+import java.util.Set;
 import java.util.UUID;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
@@ -29,9 +30,15 @@ public class PdfService implements PdfUseCase {
     private final AwsS3Properties awsS3Properties;
     private final S3TransferManager s3TransferManager;
     private final S3Presigner s3Presigner;
-    private final ExecutorService executorService = Executors.newFixedThreadPool(10);
+  
+    private final ExecutorService executorService = Executors.newVirtualThreadPerTaskExecutor();
 
     public String savePdf(MultipartFile multipartFile) {
+        String originalFileName = multipartFile.getOriginalFilename();
+        if (originalFileName == null || !isValidExtension(getExtension(originalFileName))) {
+            throw new RuntimeException("Invalid file extension.");
+        }
+
         String folder = awsS3Properties.pdfFolder();
         String date = LocalDate.now().format(DateTimeFormatter.BASIC_ISO_DATE);
         String key = String.format("%s/%s-%s.pdf", folder, date, UUID.randomUUID());
@@ -63,12 +70,26 @@ public class PdfService implements PdfUseCase {
         // MultipartFile의 InputStream을 사용하여 파일을 S3에 업로드
         try (InputStream inputStream = multipartFile.getInputStream()) {
             // S3 업로드 수행
-            s3TransferManager.upload(UploadRequest.builder()
+            var uploadFuture = s3TransferManager.upload(UploadRequest.builder()
                     .putObjectRequest(putObjectRequest)
                     .requestBody(AsyncRequestBody.fromInputStream(inputStream, multipartFile.getSize(), executorService)) // 수정된 부분
-                    .build()).completionFuture().join(); // 동기적으로 대기
+                    .build()).completionFuture();
+
+            uploadFuture.whenComplete((result, exception) -> {
+                if (exception != null) {
+                    throw new RuntimeException("파일 업로드 중 오류 발생", exception);
+                }
+            });
         } catch (Exception e) {
             throw new RuntimeException("파일 업로드 중 오류 발생", e);
         }
+    }
+
+    private String getExtension(String filename) {
+        return filename.substring(filename.lastIndexOf(".")).toLowerCase();
+    }
+
+    private boolean isValidExtension(String extension) {
+        return extension.equals(".pdf");
     }
 }
